# SustainML-Framework

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp  README.md  SustainML.pro  framework_run.sh  package.xml  project_settings.cmake  sustainml.repos  sustainml_frontend.repos
SustainML/src/: font.qrc  images.qrc  main.cpp  qml.qrc
SustainML/src/qml/: main.qml
SustainML/src/qml/components/: SML_Text.qml
SustainML/src/qml/utils/: project_settings.qml  screen_manager.qml
SustainML_installer/: create_installer.bash
SustainML_installer/config/: config.xml
docker/: Dockerfile  README.md  docker-compose.yaml  run.bash
include/sustainml/: Engine.h  Engine.hpp  REST_requester.hpp  Utils.hpp
include/sustainml/tree/: TreeItem.h  TreeModel.h
include/sustainml_frontend/: Engine.h
installer/: create_installer.bash
installer/config/: config.xml
src/: font.qrc  images.qrc  main.cpp  qml.qrc
src/cpp/: Engine.cpp  REST_requester.cpp
src/font/: font_loader.qml
src/hw_provider_fpga/: fpga_predictor_adapter.py  hw_provider_fpga_node.py
src/qml/: main.qml
src/qml/components/: SmlButton.qml  SmlCombobox.qml  SmlDialog.qml  SmlIcon.qml  SmlInput.qml  SmlMouseArea.qml  SmlScrollBar.qml  SmlScrollView.qml  SmlTabView.qml  SmlText.qml  SmlTextNoSelectable.qml
src/qml/fragments/: SmlComparisonFragment.qml  SmlGeneralFragment.qml  SmlIterationFragment.qml  SmlProblemFragment.qml
src/qml/screens/: SmlHomeScreen.qml  SmlLoadDatasetScreen.qml  SmlProblemDefinitionScreen.qml  SmlResultsScreen.qml  SmlSettingsScreen.qml
src/qml/utils/: ProjectSettings.qml  ScreenManager.qml
src/tree/: TreeItem.cpp  TreeModel.cpp
